[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
gloo-net = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
wasm-logger = "0.2"
